--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Skills</span></a>
         </li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Interest and
-              Hobbies</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Projects</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-happy-heart-eyes"></i> <span>Interest and
+              Hobbies</span></a>
+        </li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -243,40 +244,39 @@
               <p>Here I completed my B.Tech in Computer Science degree with 8.74 CGPA</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-                unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                dila</p>
+              <h4>Data Science (6 Month Program)</h4>
+              <h5>2021 - 2022</h5>
+              <p><em>Completed Data Science program from <b>Board Infinity</b></em></p>
+              <p>I had completed my six month Data Science program from Board Infinity, in that I learnt things like
+                Python, data science, machine learning, Excel, Data visualisation using Tablue</p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Intern</h4>
+              <h5>Sep 2021 - Feb 2022</h5>
+              <p><em>Sears Holdings India, Pune, India </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production
-                  communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the
-                  project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the
-                  design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Sears is an E-commerce platform which operates in the US.</li>
+                <li>I am working in the Supply chain management team.
+                </li>
+                <li>I am working on technology like Spring Boot, AWS,
+                  etc
+                </li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Associate Software Engineer</h4>
+              <h5>Feb 2022 - Present</h5>
+              <p><em>Sears Holdings India, Pune, India</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and
-                  advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Sears is an E-commerce platform which operates in the US.</li>
+                <li>Managed projects or tasks at a given time while under pressure</li>
+                <li>Sears is an E-commerce platform which operates in the US.</li>
+                <li>I currently I am working with technology like Spring Boot, AWS,
+                  SQL, Jira, Kafka, MangoDB etc
+                </li>
               </ul>
             </div>
           </div>
@@ -289,10 +289,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Interest and Hobbies</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <h2>Projects</h2>
+          <p>The projects that I worked on are mentioned below.</p>
         </div>
 
         <div class="row">
@@ -307,8 +305,10 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Disease prediction System</a></h4>
+              <p>Tools Used- Python, Machine Learning, ReactJS
+                This can predict disease using symptoms given by the user.
+                Maintain medical history for future use. Also it suggests the drug’s.</p>
             </div>
           </div>
 
@@ -323,8 +323,10 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Data cleaning and preprocessing</a></h4>
+              <p>Tools Used- Python, Machine Learning
+                Processed Bank Marketing Data,
+                Processed Automobiles Data. And also plotted of different kinds of charts</p>
             </div>
           </div>
 
@@ -339,8 +341,10 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Global Superstore Data Analytics Visualization</a></h4>
+              <p>Tools Used- Python, Machine Learning
+                Plot of different kinds of charts like line chart, scatter plot, heat
+                map, area chart, Dual-axis Chart and Map Chart.</p>
             </div>
           </div>
 
@@ -354,8 +358,10 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Predicting the Corona Percentage</a></h4>
+              <p>Tools Used- Python, Machine Learning, Flask
+                - It predicts the percentage of Corona by taking symptoms
+                - It's on a sample data set.</p>
             </div>
           </div>
 
@@ -399,60 +405,53 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
+          <h2>Interest and Hobbies</h2>
         </div>
 
         <div class="row mt-1">
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
+            <h3>Vijaykumar Chougule</h3>
+            <p class="fst-italic">
+              My Interest and Hobbies mentioned here.
+            </p>
+            <div class="row">
+              <div class="col-lg-8">
+                <ul>
+                  <div><i class="bi bi-water"></i> <strong>Swimming</strong>
+                    <p>Whenever get chance for Swimming I go for it.
+                      Swimming makes me fit and healthy.
+                    </p>
+                  </div>
+                  <div><i class="bi bi-archive"></i> <strong>Cooking</strong>
+                    <p>I love cooking, I can make Veg + Non-Veg food.
+                      Cooking is very great thing as it needs your concentration and skills for it.
+                      Always go for learn new receipes.
+                    </p>
+                  </div>
 
-          <div class="col-lg-4">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>Jirgyal Tal Jath Maharashtra, India, 416402</p>
+                  <div><i class="bi bi-film"></i> <strong>Watching Movies</strong>
+                    <p>I am very interested in Watching Movies, the Movies which are very scientific I prefer to watch
+                      them.
+                      Also the cultural and historical Movies I like to watch.
+                    </p>
+                  </div>
+                </ul>
               </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Gmail:</h4>
-                <p>vijaykumarchougule2001@gmail.com</p>
+              <div class="col-lg-4">
+                <ul>
+                  <div><i class="bi bi-activity"></i> <strong>Learning new things</strong>
+                    <p>I am always curious about knowing new things and I go for learn, atleast try once.</p>
+                  </div>
+                  <div><i class="bi bi-people-fill"></i> <strong>Voluntering</strong>
+                    <p>I am interested in Voluntering so much, become a part of society I always go for help of needy
+                      one.</p>
+                  </div>
+                  <div><i class="bi bi-megaphone"></i> <strong>Listening Podcast</strong>
+                    <p>At free time I prefer to listen the podcast of different history lectures and many.</p>
+                  </div>
+                </ul>
               </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+91 93705 01317</p>
-              </div>
-
             </div>
-
-          </div>
-
-          <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-
           </div>
 
         </div>
