--- a/index.html
+++ b/index.html
@@ -268,13 +268,26 @@
             </div>
             <div class="resume-item">
               <h4>Associate Software Engineer</h4>
-              <h5>Feb 2022 - Present</h5>
+              <h5>Feb 2022 - Jul 2022</h5>
               <p><em>Sears Holdings India, Pune, India</em></p>
               <ul>
                 <li>Sears is an E-commerce platform which operates in the US.</li>
                 <li>Managed projects or tasks at a given time while under pressure</li>
                 <li>Sears is an E-commerce platform which operates in the US.</li>
                 <li>I currently I am working with technology like Spring Boot, AWS,
+                  SQL, Jira, Kafka, MangoDB etc
+                </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Technical Associate</h4>
+              <h5>Aug 2022 - Present</h5>
+              <p><em>Sears Holdings India, Pune, India</em></p>
+              <ul>
+                <li>Sears is an E-commerce platform which operates in the US.</li>
+                <li>Managed projects or tasks at a given time while under pressure</li>
+                <li>Sears is an E-commerce platform which operates in the US.</li>
+                <li>I currently I am working with technology like Spring Boot, AWS, MQ Explorer, EC2,
                   SQL, Jira, Kafka, MangoDB etc
                 </li>
               </ul>
