--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Vijaykumar Chougule</h1>
       <p>I'm <span class="typed"
-          data-typed-items="Software Developer, Data Scientist, Machine Learning Engineer, Technologist"></span></p>
+          data-typed-items="Software Developer, Spring Boot Developer, Team Leader, AWS Technologist"></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/vijaykumar.chougule.585" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://github.com/vijaykumarchougule" class="github"><i class="bx bxl-github"></i></a>
@@ -84,9 +84,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name’s Vijaykumar, I’m 22, working as a software engineer for a Sears Holdings company.
+          <p>My name’s Vijaykumar Chougule, I’m 23, working as a software engineer for a Sears Holdings company.
             I graduated with my degree in Software Engineering in 2021 and
-            immediately went to work for a software company in Pune. Since then, I am always passinated about Machine
+            immediately went to work for a software company in Pune. Since then, I am always passionate about Machine
             Learning and AI.
           </p>
         </div>
@@ -100,7 +100,7 @@
             <p class="fst-italic">
               Currently I am working as Software Developer, at Sears Holdings India, Pune. Working in an Member
               Technology team,
-              working mostly on Spring Boot, AWS, MangoDB and MySQL. I am consistently learning Data Science.
+              working mostly on Spring Boot, AWS, MangoDB and MySQL. I am consistently learning Software Development.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -126,7 +126,7 @@
               </div>
             </div>
             <p>
-              I am highly organised. I always take notes, and I use a series of tools to help myself stay on top of
+              I am highly organized. I always take notes, and I use a series of tools to help myself stay on top of
               deadlines.
               I like to keep a clean workspace and create a logical filing method so I’m always able to find what I
               need.
@@ -152,7 +152,15 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">95%</i></span>
+              <span class="skill">Java <i class="val">98%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Spring Boot<i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -160,17 +168,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Data Science <i class="val">90%</i></span>
+              <span class="skill">MySQL <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">MySQL <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -180,25 +180,25 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">MangoDB <i class="val">80%</i></span>
+              <span class="skill">MangoDB <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Java -Spring Boot <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Machine Learning <i class="val">80%</i></span>
+              <span class="skill">AWS EC2, S3, Lambda, Code Pipeline<i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Kafka <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -221,13 +221,13 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Vijaykumar
                 Chougule</h4>
               <p><em>Innovative and deadline-driven Software Engineer with 7 Month's of experience developing
                   spring boot application.
-                  also upskilling for Data Science, Machine Learning.
+                  also skilling for Spring Boot, AWS, MongoDB.
                 </em></p>
               <ul>
                 <li>Pune, Maharashtra, India</li>
@@ -259,10 +259,16 @@
               <p><em>Sears Holdings India, Pune, India </em></p>
               <ul>
                 <li>Sears is an E-commerce platform which operates in the US.</li>
-                <li>I am working in the Supply chain management team.
+                <li>Worked with product owner to re-architect Java features within 
+                  multiple Micro services.                  
                 </li>
-                <li>I am working on technology like Spring Boot, AWS,
-                  etc
+                <li>Performed software testing, provided support to clients, and developed 
+                  plans for future software development.                 
+                </li>
+                <li>Responsible for handle technical team (10 Person)                  
+                </li>
+                <li> Handled deployment process on AWS.
+                  And Used Git-Lab for version control and collaboration
                 </li>
               </ul>
             </div>
@@ -388,8 +394,12 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">Dele Cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="">FMS Supply Chain (Working Project at Sears)</a></h4>
+              <p>Project fulfills the logistics requirements for the Sears retail stores across 
+                US and apart from that it provides shipment tracking to third party logistics.
+                - Technologies and Tools Used - Micro services, Java 8, Spring Boot, AWS, 
+                MySQL, Mongo DB, Kafka, Postman, Putty, MQ Explorer, STS, Git-lab, 
+                Git.</p>
             </div>
           </div>
 
@@ -403,8 +413,10 @@
                 </svg>
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Divera Don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">Teacher Rating System</a></h4>
+              <p>Tools Used- Java 8, Spring Boot, Micro-services, MySQL, Mongo DB and 
+                REST API.
+                - Deployed this project on AWS using EC2</p>
             </div>
           </div>
 
